# Neural_network_from_scratch

./: README.md  pyproject.toml
app/: main.py
app/modules/: activation_functions.py  layer.py  loss_functions.py  network.py  softmax_crossentropy_class.py
app/utils/: accuracy_calculator.py
